# LogCPP

./: CMakeCache.txt  CMakeLists.txt  README.md
include/: Elements.h  Global.h  JSON.h  LogStream.h  Loggers.h
src/: Elements.cpp  JSON.cpp  LogStream.cpp  Loggers.cpp  test.cpp
